--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -1,25 +1,18 @@
 * {
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
-  }
-  .section2{
-    background-color: #1d0c01;
-    height: 100vh;
-    width: 100vw;
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
 }
-.orangeLine3{
-    background-color: #eb5f10;
-    width: 80%;
-    height: .3rem;
-    margin-top: 10rem;
-    margin-left: 10rem;
+.section2 {
+  background-color: #1d0c01;
+  height: 100vh;
+  width: 100vw;
 }
 
-.orangeLine4{
-    background-color: #eb5f10;
-    width: 80%;
-    height: .3rem;
-    margin-top: 10rem;
-    margin-left: 10rem;
-}  
+.linesOrange {
+  background-color: #eb5f10;
+  height: 3rem;
+  width: 100vw;
+  display: flex;
+}
+
