--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 .section2 {
-  background-color: #1d0c01;
+  background-color: #160303;
   height: 100vh;
   width: 100vw;
 }
@@ -100,4 +100,37 @@
 .thisNav{
   color: white;
   font-size: 1.5rem;
+}
+/* ------------Contact Section------------------- */
+.section3{
+  background-color: #160303;
+  height: 100vh;
+  width: 100vw;
+}
+.main1 {
+  background-color: #eb5f10;
+  height: 3rem;
+  width: 100vw;
+  display: flex;
+
+}
+
+.navBarMain {
+  display: flex;
+  font-display: row;
+}
+
+.mybars {
+  margin-left: 15rem;
+  font-size: 1.8rem;
+  margin-top: 0.3rem;
+  
+}
+.barLinks{
+    text-decoration: none;
+    color: black;
+    
+}
+.barLinks:hover{
+    color: blueviolet;
 }
