--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -134,3 +134,69 @@
 .barLinks:hover{
     color: blueviolet;
 }
+
+.content-container-btn-orange-lines{
+  display: grid;
+
+}
+
+.orangeLine1{
+  background-color: #eb5f10;
+  width: 80%;
+  height: .3rem;
+  margin-top:1rem;
+  margin-left: 10rem;
+}
+
+.description1{
+  display: flex;
+  color: white;
+  font-size: 1.9rem;
+  margin-left: 17rem;
+  margin-top: 1rem;
+}
+/* .background-Content{
+  background-color: rgba(21, 167, 212, 0.301);
+  margin-left: 15rem;
+  height: auto;
+  width: 60%;
+  margin-top: 1rem;
+  border-radius: 3rem; */
+}
+
+
+#para{
+  display: flex;
+  color: white;
+  font-size: 1.9rem;
+  margin-left: 15rem;
+  margin-top: 10rem;
+}
+.orangeLine2{
+  background-color: #eb5f10;
+  width: 80%;
+  height: .3rem;
+  margin-top: 3rem;
+  margin-left: 10rem;
+}
+
+.myForm{
+  background-color: #eb5f10;
+  height: 30rem;
+  width: 50rem;
+  margin-top: 0.9rem;
+  margin-left: 15rem;
+}
+
+.formHeadliner{
+  background-color: #773008;
+  height: 3rem;
+  width:50rem ;
+  
+}
+
+.paragraphTitle{
+  color: white;
+  font-size: 1.5rem;
+  padding: 0.9rem;
+}
