--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -104,7 +104,7 @@
 /* ------------Contact Section------------------- */
 .section3{
   background-color: #160303;
-  height: 100vh;
+  height: 100%;
   width: 100vw;
 }
 .main1 {
@@ -199,4 +199,35 @@
   color: white;
   font-size: 1.5rem;
   padding: 0.9rem;
+}
+
+/* ......About Me Section...... */
+.divider{
+  background-color: #eb5f10;
+  width: 95%;
+  height: .3rem;
+  margin-top: 3rem;
+  /* margin-left: 5rem;
+  margin-right: 10rem; */
+  display: flex;
+  justify-content: center;
+}
+
+.Me{
+  height: 20rem;
+  width: 30rem;
+  margin-left: 30rem;
+  margin-top: 5rem;
+}
+
+.meContent{
+  width: 30rem;
+  margin-left: 30rem;
+  height: 20rem;
+  background-color: rgba(255, 255, 255, 0.986);
+}
+
+.gitHub{
+  text-decoration: none;
+  font-size: larger;
 }
