--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -213,21 +213,36 @@
   justify-content: center;
 }
 
+.aboutMimi{
+  text-decoration: none;
+  color: #eb5f10;
+  margin-left: 40rem;
+  margin-top: 3rem;
+  font-size: 1.9rem;
+}
+
 .Me{
   height: 20rem;
   width: 30rem;
   margin-left: 30rem;
-  margin-top: 5rem;
+  margin-top: 1rem;
 }
 
 .meContent{
   width: 30rem;
   margin-left: 30rem;
-  height: 20rem;
+  height: 15rem;
   background-color: rgba(255, 255, 255, 0.986);
 }
 
 .gitHub{
   text-decoration: none;
-  font-size: larger;
+  font-size: 1.0rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.mimi{
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
